--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Lint
-        run: npm run lnt
+        run: npm run lint
 
       - name: Test
         run: npm test
