--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint-staged": "^8.1.5"
   },
   "peerDependencies": {
-    "eslint": "^3.0.0 || ^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
+    "eslint": "^3.0.0 || ^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0"
   },
   "repository": {
     "type": "git",
